Issue #20283: RE pattern methods now accept the string keyword parameters as documented.  The pattern and source keyword parameters are left as deprecated aliases.